tests/baselines/reference/contextualTyping20.errors.txt
tests/cases/compiler/contextualTyping20.ts(1,58): error TS2322: Type '{ id: number; name: string; }' is not assignable to type '{ id: number; }'.
  Object literal may only specify known properties, and 'name' does not exist in type '{ id: number; }'.


==== tests/cases/compiler/contextualTyping20.ts (1 errors) ====
    var foo:{id:number;}[] = [{id:1}]; foo = [{id:1}, {id:2, name:"foo"}];
                                                             ~~~~~~~~~~
!!! error TS2322: Type '{ {|id|0|}: number; {|name|1|}: string; }' is not assignable to type '{ {|id|2|}: number; }'.
!!! error TS2322:   Object literal may only specify known properties, and 'name' does not exist in type '{ id: number; }'.
!!! annotated symbol 0 tests/cases/compiler/contextualTyping20.ts:1:52
!!! annotated symbol 1 tests/cases/compiler/contextualTyping20.ts:1:58
!!! annotated symbol 2 tests/cases/compiler/contextualTyping20.ts:1:10